# invoice-manager-py

./: .gitignore  DataEditor.py  README.md  TaxPrinter.py  data-editor.py  invoice-printer.py  pyproject.toml  requirements.txt  tax-printer.py
template/: template.py
utilities/: __init__.py  template.py
utils/: __init__.py  consts.py  funcs.py  utils.py
utils/consts/: __init__.py  consts.py
utils/funcs/: __init__.py  funcs.py
